@@ -1,5 +1,7 @@
 2006-08-05  Bas Wijnen <shevek@fmf.nl>
 	* client/gtk/connect.c: Avoid use of comma-operator.
+	* client/ai/greedy.c: Fix possible infinite loop after playing
+	monopoly card.
 
 2006-08-04  Roland Clobus <rclobus@bigfoot.com>
 	* client/gtk/interface.c: Enable roll dice for the second game of the
